# scrapr

./: Cargo.toml  LICENSE-MIT  README.md  install_scraprr.sh  pyproject.toml  scraprr_analysis.ipynb  tests.py
.github/workflows/: publish.yml
examples/: rust.rs
python/: fetch_url.py  http.py  http_tests.py  https.py  request_options.py
scrapr/: Cargo.toml  README.md  pyproject.toml
scrapr-bindings/: Cargo.toml
scrapr-core/: Cargo.toml
scrapr-core/src/: protocols.rs  request.rs  url.rs
scrapr/src/: lib.rs
scraprr/: Cargo.toml  README.md  pyproject.toml
scraprr/src/: lib.rs
scraprr/tests/: http.rs  https.rs  url.rs
src/: http.rs  lib.rs  protocols.rs  url.rs
tests/: http.rs  https.rs  url.rs
