[package]
name = "scrapr"
version = "0.1.0"
edition = "2024"

[dependencies]
native-tls = "0.2.14"
# pyo3 = { version = "0.25.1", features = ["extension-module"] }


[lib]
name = "scrapr"
crate-type = ["cdylib"]


[package.metadata.maturin]
name = "scrapr"

[dependencies.pyo3]
version = "0.25"
features = ["auto-initialize",  "extension-module"] # "test"]
