[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"


[project]
name = "scraprr"
version = "0.1.0"
authors = [{ name = "Dariush Ghassemieh", email = "dariush@ghassemieh.com" }]
description = "a Rust-based web scraping library for Python"
requires-python = ">=3.7"
license = "MIT"
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]

[tool.maturin]
module = "scraprr"
bindings = "pyo3"
